Solve images Final

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <header>
        <div class="logo">
         <div class"image">
-            <img src="/assets/yo.jpg" alt="Me Image"/>
+            <img src="Resume/assets/yo.jpg" alt="Me Image"/>
         </div>
         <div class="">Emmanuel Chavez</div>
        </div> 
@@ -165,9 +165,9 @@
             <div class="more_project_content">
                 <div class="more_project_info">
                     <div class="projectImage">
-                        <img src="/assets/laptop.png" alt="First Laptop"/>
+                        <img src="Resume/assets/laptop.png" alt="First Laptop"/>
                         <div class="projectImage_content">
-                            <img src="/assets/PSO.png" alt="First Project"/>
+                            <img src="Resume/assets/PSO.png" alt="First Project"/>
                         </div>
                     </div>
                     <div class="projectDesc">
@@ -189,9 +189,9 @@
 
                 <div class="more_project_info">
                     <div class="projectImage">
-                        <img src="/assets/laptop.png" alt="Second laptop"/>
+                        <img src="Resume/assets/laptop.png" alt="Second laptop"/>
                         <div class="projectImage_content">
-                            <img src="/assets/piano.png" alt="Second Project"/>
+                            <img src="Resume/assets/piano.png" alt="Second Project"/>
                         </div>
                     </div>
                     <div class="projectDesc">
