--- a/index.html
+++ b/index.html
@@ -220,15 +220,15 @@
             </p>
 
             <div class="more_contact_content">
-                <form class="form_container">
+                <form class="form_container" action="mailto:chavez.emmanuel020310@gmail.com">
                     <label for="name">Name</label>
-                    <input type="text" id="name" placeholder="Enter Your Name"/>
+                    <input required type="text" id="name" placeholder="Enter Your Name"/>
 
                     <label for="email">Email</label>
-                    <input type="email" id="email" placeholder="Enter Your Email"/>
+                    <input required type="email" id="email" placeholder="Enter Your Email"/>
 
                     <label for="message">Message</label>
-                    <textarea id="message" placeholder="Enter Your Message" rows="10"></textarea>
+                    <textarea require id="message" placeholder="Enter Your Message" rows="10"></textarea>
 
                     <button>Submit!</button>
                 </form>
