--- a/index.html
+++ b/index.html
@@ -486,6 +486,30 @@
               </a>
             </div>
           </div>
+
+          <div class="more_project_info">
+            <div class="projectImage">
+              <img src="assets/laptop.png" alt="Third laptop" />
+              <div class="projectImage_content">
+                <img src="assets/chat-app.png" alt="Third Project" />
+              </div>
+            </div>
+            <div class="projectDesc">
+              <h4>Chat App idea</h4>
+              <p>
+                This project presents a comprehensive proposal for a modern chat
+                application utilizing <strong>StreamChat</strong> as the service
+                provider. While the current implementation serves as a solid
+                foundation, there are ample opportunities for enhancements and
+                customization. This project can serve as an excellent template
+                for future endeavors in the realm of real-time communication
+                applications.
+              </p>
+              <a href="https://github.com/JaxxBalyit/chat-app">
+                <button>Code <i class="fa-brands fa-github"></i></button>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -505,7 +529,7 @@
             action="https://formspree.io/f/xaygbwbl"
             method="post"
           >
-          <label>Your Name:</label>
+            <label>Your Name:</label>
             <input
               require
               type="text"
