Fourth and Fifth Projects

--- a/index.html
+++ b/index.html
@@ -510,6 +510,56 @@
               </a>
             </div>
           </div>
+
+          <div class="more_project_info">
+            <div class="projectImage">
+              <img src="assets/laptop.png" alt="Fourth laptop" />
+              <div class="projectImage_content">
+                <img src="assets/text-encryptor-app.png" alt="Fourth Project" />
+              </div>
+            </div>
+            <div class="projectDesc">
+              <h4>Text Encryptor</h4>
+              <p>
+                Encrypt and decrypt text messages with ease using this web-based
+                tool. Choose any key you prefer for encryption, send the
+                encrypted message and the key to someone, have fun and keep your
+                messages secure.
+              </p>
+              <a href="https://github.com/JaxxBalyit/text-encryptor-app">
+                <button>Code <i class="fa-brands fa-github"></i></button>
+              </a>
+            </div>
+          </div>
+
+          <div class="more_project_info">
+            <div class="projectImage">
+              <img src="assets/laptop.png" alt="Fifth laptop" />
+              <div class="projectImage_content">
+                <img src="assets/todo-app.png" alt="Fifth Project" />
+              </div>
+            </div>
+            <div class="projectDesc">
+              <h4>To-Do App</h4>
+              <p>
+                This project is a simple fullstack version of a To-Do app. It's
+                personal, but people can use it to check the foundation of the
+                project. It uses <strong>Node</strong> as backend and
+                <strong>React</strong> for the frontend.
+              </p>
+              <a href="https://github.com/JaxxBalyit/todo-app-frontend">
+                <button>
+                  Code Frontend <i class="fa-brands fa-github"></i>
+                </button>
+              </a>
+              <p></p>
+              <a href="https://github.com/JaxxBalyit/todo-app-backend">
+                <button>
+                  Code Backend <i class="fa-brands fa-github"></i>
+                </button>
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
